--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <style>
 body {
-    background-image: linear-gradient(rgb(190, 190, 190),rgb(94, 94, 94));
+    background-image: url(background.png);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -39,13 +39,13 @@ h3 {
 }
 
 .button1 {
-  background-color: rgb(165, 165, 165); 
+  background-color: rgb(165, 158, 126); 
   color: black; 
-  border: 2px solid #616161;
+  border: 2px solid #66634d;
 }
 
 .button1:hover {
-  background-color: #494949;
+  background-color: #4e4c33;
   color: white;
 }
 
@@ -54,11 +54,13 @@ h3 {
 <title>EMD Collection</title>
 <link rel="icon" type="image/x-icon" href="favicon.png">
 
-<h1><img src="EMDC.png" width="320px" height="320px"/><br>EMD Collection</h1>
-<h3>A portal to all megadocs made.</h3>
 <marquee class="marq" direction="left">Monday (No Exams) Tuesday (English Period 1 and 2, Language Period 5 and 6 [Study Hall if not taking up a language]) Wednesday (No Exams) Thursday (RE Period 1 and 2, Maths Period 5 and 6) Friday (History Period 1 and 2 [Study Hall if not taking up History], Science Period 5 and 6)</marquee>
 
+<h1><img src="EMDC.png" width="320px" height="320px"/><br>EMD Collection</h1>
+<h3>A portal to all megadocs made.</h3>
+
 <button class="button button1" onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EUVm-ipPYglIm12DDU6KltEBmMud-82Z7yNSgOQ5K-t1gw?e=zbgU4A';">Maths Megadoc Link</button>
+<button class="button button1"onclick="location.href='https://paradevic.sharepoint.com/sites/msteams_f28f5e/Shared%20Documents/General/TI-NspireCAS_ReferenceGuide_EN.pdf';">Whole Ti-Nspire Encyclopedia for nerds</button>
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73399_parade_vic_edu_au/EVImKUUJ7zJFp3IEAEJwuKMB6fJ-6_83XEuNzILh82v6Nw?e=GcTHSN';">Science Megadoc Link</button>
 
 <script>
