--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ h3 {
 <button class="button button1" onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EUVm-ipPYglIm12DDU6KltEBmMud-82Z7yNSgOQ5K-t1gw?e=zbgU4A';">Maths Megadoc Link</button>
 <button class="button button1"onclick="location.href='https://paradevic.sharepoint.com/sites/msteams_f28f5e/Shared%20Documents/General/TI-NspireCAS_ReferenceGuide_EN.pdf';">Whole Ti-Nspire Encyclopedia for nerds</button>
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73399_parade_vic_edu_au/EVImKUUJ7zJFp3IEAEJwuKMB6fJ-6_83XEuNzILh82v6Nw?e=GcTHSN';">Science Megadoc Link</button>
+<button class="button button1"onclick="location.href='https://www.youtube.com/watch?v=9XTezzIxJMY';">RE Megadoc (ALL BIBLICAL PROPHETS, WONDER AND FREE GUY QUESTIONS INCLUDED)</button>
 
 <script>
 
