--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ h3 {
 <button class="button button1"onclick="location.href='https://paradevic.sharepoint.com/sites/msteams_f28f5e/Shared%20Documents/General/TI-NspireCAS_ReferenceGuide_EN.pdf';">Whole Ti-Nspire Encyclopedia for nerds</button>
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73399_parade_vic_edu_au/EVImKUUJ7zJFp3IEAEJwuKMB6fJ-6_83XEuNzILh82v6Nw?e=GcTHSN';">Science Megadoc Link</button>
 <button class="button button1"onclick="location.href='https://www.youtube.com/watch?v=9XTezzIxJMY';">RE Megadoc (ALL BIBLICAL PROPHETS, WONDER AND FREE GUY QUESTIONS INCLUDED)</button>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EWv3Bm8IdO9BhIoaUY6UoCgB0OosuQZ4dYG-AgDQN1Trkg?e=Ns6s3M';">Completed Wonder Booklet</button>
 
 <script>
 
