--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ h3 {
 .button1 {
   background-color: rgb(165, 158, 126); 
   color: black; 
-  border: 2px solid #66634d;
+  border: 2px solid #59b0d9;
 }
 
 .button1:hover {
-  background-color: #4e4c33;
+  background-color: #33424e;
   color: white;
 }
 
@@ -54,16 +54,12 @@ h3 {
 <title>EMD Collection</title>
 <link rel="icon" type="image/x-icon" href="favicon.png">
 
-<marquee class="marq" direction="left">Monday (No Exams) Tuesday (English Period 1 and 2, Language Period 5 and 6 [Study Hall if not taking up a language]) Wednesday (No Exams) Thursday (RE Period 1 and 2, Maths Period 5 and 6) Friday (History Period 1 and 2 [Study Hall if not taking up History], Science Period 5 and 6)</marquee>
+<marquee class="marq" direction="left">Monday (Language Period 1 and 2 [NO STUDY HALL if not doing Language Exam]) | Tuesday (English Period 1 and 2) | Wednesday (RE Period 1 and 2, Science Period 5 and 6) | Thursday (History Period 1 and 2 [NO STUDY HALL if not doing Language Exam], Maths Period 5 and 6) | Friday (Day off)</marquee>
 
 <h1><img src="EMDC.png" width="320px" height="320px"/><br>EMD Collection</h1>
 <h3>A portal to all megadocs made.</h3>
 
-<button class="button button1" onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EUVm-ipPYglIm12DDU6KltEBmMud-82Z7yNSgOQ5K-t1gw?e=zbgU4A';">Maths Megadoc Link</button>
 <button class="button button1"onclick="location.href='https://paradevic.sharepoint.com/sites/msteams_f28f5e/Shared%20Documents/General/TI-NspireCAS_ReferenceGuide_EN.pdf';">Whole Ti-Nspire Encyclopedia for nerds</button>
-<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73399_parade_vic_edu_au/EVImKUUJ7zJFp3IEAEJwuKMB6fJ-6_83XEuNzILh82v6Nw?e=GcTHSN';">Science Megadoc Link</button>
-<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/ESI6_wzIjahMkj893VpZecMB927dpVfOVJUeS2_3ZQ5N7w?e=2y0aox';">Biblical Prophet Answers (Jonah, Amos, Elijah)</button>
-<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EWv3Bm8IdO9BhIoaUY6UoCgB0OosuQZ4dYG-AgDQN1Trkg?e=Ns6s3M';">Completed Wonder Booklet</button>
 
 <script>
 
