--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ h3 {
 }
 
 .button1 {
-  background-color: rgb(165, 158, 126); 
+  background-color: #59b0d9; 
   color: black; 
-  border: 2px solid #59b0d9;
+  border: 2px solid #1d3a47;
 }
 
 .button1:hover {
