--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ h3 {
 <h1><img src="EMDC.png" width="320px" height="320px"/><br>EMD Collection</h1>
 <h3>A portal to all megadocs made.</h3>
 
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/ET07eDaZWyZIptws8-3nYZgBQ6eBwwtZUoBXaa_I8q1DXg?e=XOSp3a';">Maths Megadoc Semester 2 IN PROGRESS</button>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/Ef7TsyHrwt5Mo4NjtYxA6N0Bw_ddeOTa09E67GWCKMBpkA?e=4HjD0N';">RE Revision Completed with Details IN PROGRESS</button>
 <button class="button button1"onclick="location.href='https://paradevic.sharepoint.com/sites/msteams_f28f5e/Shared%20Documents/General/TI-NspireCAS_ReferenceGuide_EN.pdf';">Whole Ti-Nspire Encyclopedia for nerds</button>
 
 <script>
