--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@ h3 {
 <h3>A portal to all megadocs made.</h3>
 
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/ET07eDaZWyZIptws8-3nYZgBQ6eBwwtZUoBXaa_I8q1DXg?e=XOSp3a';">Maths Megadoc Semester 2 IN PROGRESS</button>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EXHoJro_VmZBsf8fWWEtFlUBdEm7tC6iyahQp311gvgqSQ?e=toGwOk';">Science Reference (Everything he told us to study)</button>
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/Ef7TsyHrwt5Mo4NjtYxA6N0Bw_ddeOTa09E67GWCKMBpkA?e=4HjD0N';">RE Revision Completed with Details IN PROGRESS</button>
 <button class="button button1"onclick="location.href='https://paradevic.sharepoint.com/sites/msteams_f28f5e/Shared%20Documents/General/TI-NspireCAS_ReferenceGuide_EN.pdf';">Whole Ti-Nspire Encyclopedia for nerds</button>
+<button class="button button1"onclick="location.href='The Hate Race - Maxine Beneba Clarke.pdf';">Digital Copy of The Hate Race</button>
+<button class="button button1"onclick="location.href='https://myshakespeare.com/romeo-and-juliet/act-1-prologue';">Entire Romeo and Juliet with Annotations from myShakespeare</button>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/christina_marazita_parade_vic_edu_au/EV-3xkcg6sRIkPB7V9r1ZfEB3__Hi1VyCsJ58KxY5h8kIQ?e=xaLTQQ';">Exemplar Passage Analysis</button>
 
 <script>
 
