--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@ h3 {
   border-radius: 8px;
 }
 
+.buttonheader {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-align: center;
+}
+
 .button1 {
   background-color: #59b0d9; 
   color: black; 
@@ -59,10 +65,19 @@ h3 {
 <h1><img src="EMDC.png" width="320px" height="320px"/><br>EMD Collection</h1>
 <h3>A portal to all megadocs made.</h3>
 
-<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/ET07eDaZWyZIptws8-3nYZgBQ6eBwwtZUoBXaa_I8q1DXg?e=XOSp3a';">Maths Megadoc Semester 2 IN PROGRESS</button>
-<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EXHoJro_VmZBsf8fWWEtFlUBdEm7tC6iyahQp311gvgqSQ?e=toGwOk';">Science Reference (Everything he told us to study)</button>
-<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/Ef7TsyHrwt5Mo4NjtYxA6N0Bw_ddeOTa09E67GWCKMBpkA?e=4HjD0N';">RE Revision Completed with Details IN PROGRESS</button>
+<h1 class="buttonheader"><b>Maths</b></h1>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/ET07eDaZWyZIptws8-3nYZgBQ6eBwwtZUoBXaa_I8q1DXg?e=XOSp3a';">Maths Megadoc Semester 2</button>
 <button class="button button1"onclick="location.href='https://paradevic.sharepoint.com/sites/msteams_f28f5e/Shared%20Documents/General/TI-NspireCAS_ReferenceGuide_EN.pdf';">Whole Ti-Nspire Encyclopedia for nerds</button>
+<br>
+<h1 class="buttonheader"><b>Science</b></h1>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EXHoJro_VmZBsf8fWWEtFlUBdEm7tC6iyahQp311gvgqSQ?e=toGwOk';">Science Reference (Everything he told us to study)</button>
+<br>
+<h1 class="buttonheader"><b>Religion</b></h1>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/Ef7TsyHrwt5Mo4NjtYxA6N0Bw_ddeOTa09E67GWCKMBpkA?e=4HjD0N';">RE Revision Completed with Details IN PROGRESS</button>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EUV2-dMpPrdNo-iHEeWD95cBtSJcmzBvyGTU1ofnpQDEuw?e=pjcNvh';">Beatitudes and their Meanings</button>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EaQPX7GJbIBMtEVAnLtQ3NMBBZGY8dn5NYlWfD4cm1xkgw?e=QcEBs0';">All 4 Apparitions of Mary</button>
+<br>
+<h1 class="buttonheader"><b>English</b></h1>
 <button class="button button1"onclick="location.href='The Hate Race - Maxine Beneba Clarke.pdf';">Digital Copy of The Hate Race</button>
 <button class="button button1"onclick="location.href='https://myshakespeare.com/romeo-and-juliet/act-1-prologue';">Entire Romeo and Juliet with Annotations from myShakespeare</button>
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/christina_marazita_parade_vic_edu_au/EV-3xkcg6sRIkPB7V9r1ZfEB3__Hi1VyCsJ58KxY5h8kIQ?e=xaLTQQ';">Exemplar Passage Analysis</button>
