--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ h1 {
     font-family: superMario;
     text-align: center;
     font-size: 70px;
+    color: white;
 }
 h3 {
     text-align: center;
@@ -20,6 +21,10 @@ h3 {
 
 .marq {
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    width: 100%;
+    background-color: #59b0d9; 
+    border: 2px solid #1d3a47;
 }
 
 .button {
@@ -42,6 +47,7 @@ h3 {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     text-align: center;
+    font-size: 30px;
 }
 
 .button1 {
