--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ h3 {
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EXHoJro_VmZBsf8fWWEtFlUBdEm7tC6iyahQp311gvgqSQ?e=toGwOk';">Science Reference (Everything he told us to study)</button>
 <br>
 <h1 class="buttonheader"><b>Religion</b></h1>
-<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/Ef7TsyHrwt5Mo4NjtYxA6N0Bw_ddeOTa09E67GWCKMBpkA?e=4HjD0N';">RE Revision Completed with Details IN PROGRESS</button>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/Ef7TsyHrwt5Mo4NjtYxA6N0Bw_ddeOTa09E67GWCKMBpkA?e=4HjD0N';">RE Revision</button>
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EUV2-dMpPrdNo-iHEeWD95cBtSJcmzBvyGTU1ofnpQDEuw?e=pjcNvh';">Beatitudes and their Meanings</button>
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/EaQPX7GJbIBMtEVAnLtQ3NMBBZGY8dn5NYlWfD4cm1xkgw?e=QcEBs0';">All 4 Apparitions of Mary</button>
 <br>
