--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h3 {
 
 <marquee class="marq" direction="left">Monday (Language Period 1 and 2 [NO STUDY HALL if not doing Language Exam]) | Tuesday (English Period 1 and 2) | Wednesday (RE Period 1 and 2, Science Period 5 and 6) | Thursday (History Period 1 and 2 [NO STUDY HALL if not doing Language Exam], Maths Period 5 and 6) | Friday (Day off)</marquee>
 
-<h1><img src="EMDC.png" width="320px" height="320px"/><br>EMD Collection</h1>
+<h1><br>EMD Collection</h1>
 <h3>A portal to all megadocs made.</h3>
 
 <h1 class="buttonheader"><b>Maths</b></h1>
