--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@ h3 {
 .marq {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    width: 100%;
+    width: 70%;
     background-color: #59b0d9; 
     border: 2px solid #1d3a47;
     padding: 16px 32px;
+    align-self: center;
 }
 
 .button {
