--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@ h3 {
 <button class="button button1"onclick="location.href='The Hate Race - Maxine Beneba Clarke.pdf';">Digital Copy of The Hate Race</button>
 <button class="button button1"onclick="location.href='https://myshakespeare.com/romeo-and-juliet/act-1-prologue';">Entire Romeo and Juliet with Annotations from myShakespeare</button>
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/christina_marazita_parade_vic_edu_au/EV-3xkcg6sRIkPB7V9r1ZfEB3__Hi1VyCsJ58KxY5h8kIQ?e=xaLTQQ';">Exemplar Passage Analysis</button>
+<br>
+<h1 class="buttonheader"><b>Older Resources</b></h1>
+<button class="button button1"onclick="location.href='old/';">Science Reference (Everything he told us to study)</button>
 
 <script>
 
