--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ h3 {
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/christina_marazita_parade_vic_edu_au/EV-3xkcg6sRIkPB7V9r1ZfEB3__Hi1VyCsJ58KxY5h8kIQ?e=xaLTQQ';">Exemplar Passage Analysis</button>
 <br>
 <h1 class="buttonheader"><b>Older Resources</b></h1>
-<button class="button button1"onclick="location.href='old/';">Science Reference (Everything he told us to study)</button>
+<button class="button button1"onclick="location.href='/old';">Science Reference (Everything he told us to study)</button>
 
 <script>
 
