--- a/old/index.html
+++ b/old/index.html
@@ -2,7 +2,7 @@
   <body>
     <script>
       (async () => {
-        const response = await fetch('https://api.github.com/repos/:user/:repo/contents/old/');
+        const response = await fetch('https://api.github.com/repos/emdcollection/emdcollection.github.io/contents/old/');
         const data = await response.json();
         let htmlString = '<ul>';
         
