--- a/old/index.html
+++ b/old/index.html
@@ -7,7 +7,7 @@
         let htmlString = '<ul>';
         
         for (let file of data) {
-          htmlString += `<li><a src="${file.name}">${file.name}</a></li>`;
+          htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
         }
 
         htmlString += '</ul>';
