--- a/old/index.html
+++ b/old/index.html
@@ -7,7 +7,7 @@
         let htmlString = '<ul>';
         
         for (let file of data) {
-          if (${file.name} != "index.html") {
+          if (file.name != "index.html") {
             htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
           }
         }
