--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ h3 {
 <button class="button button1"onclick="location.href='https://myshakespeare.com/romeo-and-juliet/act-1-prologue';">Entire Romeo and Juliet with Annotations from myShakespeare</button>
 <button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/christina_marazita_parade_vic_edu_au/EV-3xkcg6sRIkPB7V9r1ZfEB3__Hi1VyCsJ58KxY5h8kIQ?e=xaLTQQ';">Exemplar Passage Analysis</button>
 <br>
-<h1 class="buttonheader"><b>Older Resources</b></h1>
-<button class="button button1"onclick="location.href='/old';">Science Reference (Everything he told us to study)</button>
+<h1 class="buttonheader"><b>All Resources</b></h1>
+<button class="button button1"onclick="location.href='/old';">View All Resources (includes older ones)</button>
 
 <script>
 
