--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ h3 {
 <title>EMD Collection</title>
 <link rel="icon" type="image/x-icon" href="favicon.png">
 
-<marquee class="marq" direction="left">Monday (Language Period 1 and 2 [NO STUDY HALL if not doing Language Exam]) | Tuesday (English Period 1 and 2) | Wednesday (RE Period 1 and 2, Science Period 5 and 6) | Thursday (History Period 1 and 2 [NO STUDY HALL if not doing Language Exam], Maths Period 5 and 6) | Friday (Day off)</marquee>
+<button class="button button1"onclick="location.href='Sem 2 Timetable.pdf';"><marquee direction="left">Monday (Language Period 1 and 2 [NO STUDY HALL if not doing Language Exam]) | Tuesday (English Period 1 and 2) | Wednesday (RE Period 1 and 2, Science Period 5 and 6) | Thursday (History Period 1 and 2 [NO STUDY HALL if not doing Language Exam], Maths Period 5 and 6) | Friday (Day off)</marquee></button>
+
 
 <h1><br>EMD Collection</h1>
 <h3>A portal to all megadocs made.</h3>
