--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ h3 {
 <h3>A portal to all megadocs made.</h3>
 
 <h1 class="buttonheader"><b>Maths</b></h1>
-<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/ET07eDaZWyZIptws8-3nYZgBQ6eBwwtZUoBXaa_I8q1DXg?e=XOSp3a';">Maths Megadoc Semester 2</button>
+<button class="button button1"onclick="location.href='https://paradevic-my.sharepoint.com/:w:/g/personal/73540_parade_vic_edu_au/ET07eDaZWyZIptws8-3nYZgBQ6eBwwtZUoBXaa_I8q1DXg?e=XOSp3a';">Maths Megadoc Semester 2 (view on Desktopto see equations)</button>
 <button class="button button1"onclick="location.href='https://paradevic.sharepoint.com/sites/msteams_f28f5e/Shared%20Documents/General/TI-NspireCAS_ReferenceGuide_EN.pdf';">Whole Ti-Nspire Encyclopedia for nerds</button>
 <br>
 <h1 class="buttonheader"><b>Science</b></h1>
